# regen

./: .gitignore  LICENSE  README.md  __init__.py  av_reg_builder.py  cli.py  cli.py.lprof  crawler.py  pyproject.toml  rebuilder.py  regen.py  regenerator - Copy.py  regenerator.py  regenerator.py.lprof  setup.py  test.py
av_regex/: av_censored_id.txt  av_keyword.txt  av_regex.txt  av_uncensored_id.txt
builder/: keyword_whitelist.txt  prefix_blacklist.txt  prefix_whitelist.txt
builder/data/: ave.json  dmm.json  frequency.json  javbus.json  javdb.json  mgs.json
raw/: data.json  id_blacklist.txt  id_prefix.txt  id_whitelist.txt  keyword.txt  keyword_blacklist.txt  keyword_whitelist.txt  prefix.txt  prefix_blacklist.txt  prefix_whitelist.txt
regenerator/: __init__.py  __main__.py  gen.py
report/: mismatch_frequency.txt  unmatch_frequency.txt
