[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regen"
version = "0.1.0"
description = "A regular expressions generator"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{ name = "David Pi", email = "libertypi@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["ortools>=9.0"]
keywords = ["regular-expression", "regex", "optimization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/libertypi/regen"
Repository = "https://github.com/libertypi/regen"

[project.scripts]
regen = "regen:main"

[tool.setuptools]
py-modules = ["regen"]
